<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/linear_view_fragment"
    >
  <fragment
      android:id="@+id/linear_view_fragment"
      android:name="com.myyour.eCommApp.ui.LinearViewFragment"/>
  <fragment
      android:id="@+id/grid_view_fragment"
      android:name="com.myyour.eCommApp.ui.GridViewFragment"/>

</navigation>